{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 25,
  "lineage": "852ca452-6406-47b4-2ac3-0e3e866e9a1c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.107.106.179",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-08-12T01:26:50.503-07:00",
            "id": "projects/fleet-goal-286112/regions/europe-west3/addresses/ipv4-address",
            "name": "ipv4-address",
            "network_tier": "PREMIUM",
            "project": "fleet-goal-286112",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-goal-286112/regions/europe-west3/addresses/ipv4-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "terraform-task-firewall-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-08-12T01:29:55.257-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fleet-goal-286112/global/firewalls/terraform-task-firewall-ssh",
            "log_config": [],
            "name": "terraform-task-firewall-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/fleet-goal-286112/global/networks/terraform-task-network",
            "priority": 1000,
            "project": "fleet-goal-286112",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-goal-286112/global/firewalls/terraform-task-firewall-ssh",
            "source_ranges": [
              "82.207.102.102"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.terraform-task-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "terraform-task-firewall-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-08-12T01:29:55.106-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fleet-goal-286112/global/firewalls/terraform-task-firewall-web",
            "log_config": [],
            "name": "terraform-task-firewall-web",
            "network": "https://www.googleapis.com/compute/v1/projects/fleet-goal-286112/global/networks/terraform-task-network",
            "priority": 1000,
            "project": "fleet-goal-286112",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-goal-286112/global/firewalls/terraform-task-firewall-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.terraform-task-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "terraform-task-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200807",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fleet-goal-286112/zones/europe-west3-a/disks/terraform-task-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/fleet-goal-286112/zones/europe-west3-a/instances/terraform-task-instance",
            "instance_id": "4646260799392585323",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDzkFFCmLAbrHZj8cGLVaSIHONQoekpNWp5v/WZsWfRT8bpB55TXWl6QcMFZRy7MuWVA2pJEOWXJhFfEf1dwp5rTUaXwOQvJZGYQBGyFbkIyNljDUcEWfbKM4S2OmZZ7pA6kcBi0EgPqAFix3UD/t8B6NY3pv7tnHgAu7jrWUHgqWYRYtOH5jmLQYvwVLna2vuXlun6T0cGGkKfhKwqkgx0DxY+4yt0rzM15l9Ij+8SoCP2dnzsWvq6SHfMaJzxgAdM7OvycsXlxNqg6gHsdKqBAVYdHX8DPMSIjc/sGSU94/nFOFUUtT4Rp5PNBpLjdAI/PS4fuDzQo0GYk+AIGqysjSugUQ86RbbYQNwIDCd3Zxsq3qwRVwfmKpwA/8AqcRwXlfX3Oi8TZyPSE1wWUh/Hpiua4+ywtHWWZUF9TUCONN [...]
            },
            "metadata_fingerprint": "bK_9yCCu6h0=",
            "name": "terraform-task-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.107.106.179",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fleet-goal-286112/global/networks/terraform-task-network",
                "network_ip": "10.156.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fleet-goal-286112/regions/europe-west3/subnetworks/terraform-task-network",
                "subnetwork_project": "fleet-goal-286112"
              }
            ],
            "project": "fleet-goal-286112",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-goal-286112/zones/europe-west3-a/instances/terraform-task-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "terraform-task"
            ],
            "tags_fingerprint": "Dv5VYeDdMVc=",
            "zone": "europe-west3-a"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_network.terraform-task-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "terraform-task-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/fleet-goal-286112/global/networks/terraform-task-network",
            "name": "terraform-task-network",
            "project": "fleet-goal-286112",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-goal-286112/global/networks/terraform-task-network"
          }
        }
      ]
    }
  ]
}